# prestagri

./: .gitignore  README.md  Taskfile.yml  _shell.nix
.github/workflows/: deploy.yml
backend/: Procfile  README.md  main.py  pyproject.toml  var.py
backend/src/: config.py  main.py
backend/src/api/: default.py
backend/src/grist/: grist.py
doc/: astro.config.mjs  package-lock.json
doc/src/content/docs/: index.mdx
doc/src/content/docs/reference/: api.md  contributors.md  dn.md
doc/src/content/docs/tutorial/: 1_first_run.md  1_staging.md
